aligned nav center in mobile view, added 2vw padding-left and right to avoid text bumping into margin on smaller views

--- a/site/wrappers/RootWrapper.less
+++ b/site/wrappers/RootWrapper.less
@@ -1,4 +1,5 @@
 @logo-color: #10b068;
+@mobileMenuBreaksAt: ~"only screen and (max-width: 510px)"; 
 
 .RootWrapper {
   min-height: 100%;
@@ -14,14 +15,20 @@
     &-inner {
       max-width: 900px;
       margin: 0 auto;
-
       text-align: right;
       line-height: 50px;
+    
+      @media @mobileMenuBreaksAt {
+        text-align:center;
+      }
+
     }
   }
 
   &-body {
     padding: 50px 0;
+    padding-right: 2vw;
+    padding-left:2vw;
     max-width: 900px;
     min-height: 100%;
     margin: 0 auto;
@@ -43,8 +50,13 @@
     color: #333;
     font-size: 24px;
     font-weight: 500;
-
     float: left;
+
+    @media @mobileMenuBreaksAt {
+        text-align:center;
+        width:100%;
+    }
+
   }
 
   &-footer {
